@@ -22,6 +22,7 @@ plugins/asciidoc
 plugins/bootstrap
 plugins/c_src
 plugins/ci
+plugins/concuerror
 plugins/ct
 plugins/dialyzer
 plugins/edoc
